--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.4.1",
+    "readline-sync": "^1.4.10",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
